--- a/marketplace/package.json
+++ b/marketplace/package.json
@@ -40,6 +40,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.6",
     "@types/react-dom": "^19.0.3",
     "sass": "^1.83.4",
     "tailwindcss": "^3.4.17"
