--- a/marketplace/tsconfig.json
+++ b/marketplace/tsconfig.json
@@ -8,6 +8,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "jsx": "react-jsx",
+    "allowSyntheticDefaultImports": true
   },
   "exclude": ["node_modules"]
 }
